[package]
name = "TimeWF"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14.0"
fltk = "1.4.26"
async-std = "1.9.0"
chrono = "0.4"
tokio = { version = "1.*", features = ["full"] } 
encoding_rs = "*"